src/objects/QIPP_Task__c.object
<CustomObject>
    <description>Custom Object &quot;Task&quot; for the QIPP Application</description>
    <fields>
        <fullName>KPI_Actual_Value__c</fullName>
        <label>KPI Actual Value</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KPI_Target_Value__c</fullName>
        <label>KPI Target Value</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project ID</label>
        <referenceTo>QIPP_Project__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Lead_Email__c</fullName>
        <label>Project Lead Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Number__c</fullName>
        <formula>Project_ID__r.Project_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Completion_Date__c</fullName>
        <inlineHelpText>Task Completion Date - Target</inlineHelpText>
        <label>Target Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TaskImplementorEmail__c</fullName>
        <label>TaskImplementorEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Task_Age__c</fullName>
        <formula>CASE( Task_State__c , 

&quot;In Progress&quot;, TEXT(today()- Task_Created_Date__c) +&quot; days&quot;,

&quot;Complete&quot;, TEXT(Task_Completion_Date_Actual__c -  Task_Created_Date__c) +&quot; days&quot;,

&quot;Canceled&quot;, TEXT(Task_Completion_Date_Actual__c -  Task_Created_Date__c) +&quot; days&quot;,

TEXT(today()- Task_Created_Date__c) +&quot; days&quot;

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Automatically calculated based on task creation and forecast completion date.  Expressed in calendar days.</inlineHelpText>
        <label>Task Age</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Completion_Date_Actual__c</fullName>
        <inlineHelpText>Actual completion date of the task</inlineHelpText>
        <label>Actual</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Task_Completion_Date_Forecast__c</fullName>
        <inlineHelpText>Date the task is expected to complete</inlineHelpText>
        <label>Forecast</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Task_Created_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <inlineHelpText>Automatically populated - Today.</inlineHelpText>
        <label>Task Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Task_Description_Detailed__c</fullName>
        <label>Task Description - Detailed</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Task_Implementer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Resource assigned to complete the task</inlineHelpText>
        <label>Task Implementer</label>
        <referenceTo>QIPP_Contacts__c</referenceTo>
        <relationshipName>Tasks1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Task_Initiator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The user creating the task</inlineHelpText>
        <label>Task Initiator</label>
        <referenceTo>QIPP_Contacts__c</referenceTo>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Task_KPI__c</fullName>
        <label>Task KPI</label>
        <picklist>
            <picklistValues>
                <fullName># BTS conf.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName># Closed AI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName># Eme Cases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName># Engage AP exec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName># Escaped Defects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName># F2F mtg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName># Faulty PIUs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName># Major Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName># New Offer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName># of esc A and B faults</fullName>
            </picklistValues>
            <picklistValues>
                <fullName># of Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName># of Patches</fullName>
            </picklistValues>
            <picklistValues>
                <fullName># Open SW Defects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName># OPR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName># Outages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName># Reslution t</fullName>
            </picklistValues>
            <picklistValues>
                <fullName># Return HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName># SW Errors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName># SW Patches per release, # Tickets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>% Trained</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agreed sales targets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP and Close the Loop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call drop rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Setup Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Run Time Reduction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash Flow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cell Availability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CORR. LT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost Saving</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Task_Name_Succinct__c</fullName>
        <inlineHelpText>Top level task name</inlineHelpText>
        <label>Task Name - Succinct</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Notes__c</fullName>
        <inlineHelpText>Any other relevant notes not already captured in the detail task description.</inlineHelpText>
        <label>Task Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Task_Number__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp; Id, TEXT(Project_ID__r.Project_Type__c )+&quot;-&quot; + Project_ID__r.Project_No__c +&quot;-&quot;+ RIGHT( Name , 4), &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Percent_Complete__c</fullName>
        <label>Task Percent Complete</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Task_Schedule_Status__c</fullName>
        <formula>IF ( OR( ISPICKVAL( Task_State__c , &apos;Complete&apos;), ISPICKVAL( Task_State__c , &apos;Canceled&apos;)),  TEXT(Task_State__c),
	IF( Task_Completion_Date_Forecast__c  =   Target_Completion_Date__c , &quot;On Plan&quot;,
 		
 		IF( Task_Completion_Date_Forecast__c  &gt;   Target_Completion_Date__c , &quot;Behind&quot;,
 			
 			IF( Task_Completion_Date_Forecast__c  &lt;   Target_Completion_Date__c , &quot;Ahead&quot;,
 				
 				IF(  OR(ISBLANK( Task_Completion_Date_Forecast__c ), ISBLANK( Target_Completion_Date__c ) ) , &quot;TBD&quot;, &quot;&quot;
 					 				
 				)
 			)
 		) 
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Read-only field determined by Target and Forecast dates</inlineHelpText>
        <label>Task Schedule Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Start_Date__c</fullName>
        <label>Task Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Task_State__c</fullName>
        <label>Task State</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not started</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Task_Type_Description__c</fullName>
        <description>Task Type Description</description>
        <label>Task Type Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Type__c</fullName>
        <label>Task Type</label>
        <picklist>
            <picklistValues>
                <fullName>Milestone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activity</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>QIPP Task</label>
    <nameField>
        <displayFormat>TSK-{0000}</displayFormat>
        <label>Task Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tasks</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Validation_for_Task_Percent_Complete</fullName>
        <active>true</active>
        <errorConditionFormula>OR( Task_Percent_Complete__c &gt; 1.0, Task_Percent_Complete__c &lt; 0.0 )</errorConditionFormula>
        <errorDisplayField>Task_Percent_Complete__c</errorDisplayField>
        <errorMessage>Percentage must be between 0 and 100%.</errorMessage>
    </validationRules>
</CustomObject>